--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit;}
+html {box-sizing:border-box}*,*:before,*:after{box-sizing:inherit;}
 
 img {
   vertical-align: middle;
@@ -20,7 +20,7 @@ hr {
   position: relative;
   max-width: 1600px;
   min-width: 500px;
-  height: 800px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
 }
@@ -96,14 +96,6 @@ hr {
   float: left;
   display: inline;
   width: 100%;
-}
-
-@media (min-width: 601px) {
-  .about__content,
-  .about__img-left {
-    width: 49.9999%;
-  }
-
 }
 
 .menu__img,
